--- a/appproject/accounts/templates/accounts/s_login.html
+++ b/appproject/accounts/templates/accounts/s_login.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block global_navigation %}{% endblock %}
 {% block global_character_widget %}{% endblock %}
 {% load static %}
 
