--- a/appproject/accounts/templates/group/join_confirm.html
+++ b/appproject/accounts/templates/group/join_confirm.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% block global_navigation %}{% endblock %}
 {% load static %}
 
 {% block title %}グループにはいるかな？ - CodeMon{% endblock %}
